@startuml ERD_Database
title ERD - Hệ thống SmartPOS Quán Cà Phê Minh Hữu

' Định nghĩa entities
entity "User" as user {
  * Id : int <<PK>>
  --
  * Username : nvarchar(50) <<unique>>
  * Password : nvarchar(255)
  * Role : nvarchar(20)
  FullName : nvarchar(100)
  Phone : nvarchar(15)
  CreatedAt : datetime
  UpdatedAt : datetime
  IsDeleted : bit
}

entity "Area" as area {
  * Id : int <<PK>>
  --
  * Name : nvarchar(100)
  Description : nvarchar(255)
  CreatedAt : datetime
  IsDeleted : bit
}

entity "Table" as table {
  * Id : int <<PK>>
  --
  TableNumber : int
  TableName : nvarchar(50)
  * AreaId : int <<FK>>
  Seats : int
  QRCode : nvarchar(255)
  Status : nvarchar(20)
  CreatedAt : datetime
  UpdatedAt : datetime
  IsDeleted : bit
}

entity "TableSession" as session {
  * Id : int <<PK>>
  --
  * TableId : int <<FK>>
  SessionCode : nvarchar(50)
  StartTime : datetime
  EndTime : datetime
  TotalAmount : decimal(18,2)
  Status : nvarchar(20)
  CreatedAt : datetime
}

entity "Order" as order {
  * Id : int <<PK>>
  --
  OrderCode : nvarchar(50)
  UserId : int <<FK>>
  TableId : int <<FK>>
  CustomerName : nvarchar(100)
  CustomerPhone : nvarchar(15)
  OrderType : nvarchar(20)
  TotalAmount : decimal(18,2)
  DiscountAmount : decimal(18,2)
  FinalAmount : decimal(18,2)
  PaymentMethod : nvarchar(50)
  IsPaid : bit
  Status : nvarchar(20)
  Note : nvarchar(500)
  ShiftId : int <<FK>>
  CreatedAt : datetime
  UpdatedAt : datetime
  IsDeleted : bit
}

entity "OrderDetail" as orderdetail {
  * Id : int <<PK>>
  --
  * OrderId : int <<FK>>
  * ProductId : int <<FK>>
  ProductName : nvarchar(100)
  Quantity : int
  Size : nvarchar(10)
  Toppings : nvarchar(255)
  UnitPrice : decimal(18,2)
  Subtotal : decimal(18,2)
  Note : nvarchar(255)
  Status : nvarchar(20)
  StartCookingTime : datetime
  CompletedTime : datetime
}

entity "Category" as category {
  * Id : int <<PK>>
  --
  * Name : nvarchar(100)
  Description : nvarchar(255)
  CreatedAt : datetime
  IsDeleted : bit
}

entity "Product" as product {
  * Id : int <<PK>>
  --
  * Name : nvarchar(100)
  * CategoryId : int <<FK>>
  Price : decimal(18,2)
  ImageUrl : nvarchar(255)
  Description : nvarchar(500)
  Status : nvarchar(20)
  CreatedAt : datetime
  IsDeleted : bit
}

entity "ProductSize" as productsize {
  * Id : int <<PK>>
  --
  * ProductId : int <<FK>>
  SizeName : nvarchar(10)
  PriceAdjustment : decimal(18,2)
  IsDefault : bit
  CreatedAt : datetime
  IsDeleted : bit
}

entity "Topping" as topping {
  * Id : int <<PK>>
  --
  * Name : nvarchar(100)
  Price : decimal(18,2)
  IngredientId : int <<FK>>
  Status : nvarchar(20)
  CreatedAt : datetime
  IsDeleted : bit
}

entity "Recipe" as recipe {
  * Id : int <<PK>>
  --
  * ProductId : int <<FK>>
  * IngredientId : int <<FK>>
  Quantity : decimal(18,2)
  Unit : nvarchar(20)
  CreatedAt : datetime
}

entity "IngredientCategory" as ingcategory {
  * Id : int <<PK>>
  --
  * Name : nvarchar(100)
  Description : nvarchar(255)
  CreatedAt : datetime
  IsDeleted : bit
}

entity "Ingredient" as ingredient {
  * Id : int <<PK>>
  --
  * Name : nvarchar(100)
  CategoryId : int <<FK>>
  Description : nvarchar(500)
  CreatedAt : datetime
  IsDeleted : bit
}

entity "IngredientUnit" as ingunit {
  * Id : int <<PK>>
  --
  * IngredientId : int <<FK>>
  UnitName : nvarchar(50)
  ConversionFactor : decimal(18,4)
  IsBaseUnit : bit
  CreatedAt : datetime
}

entity "InventoryBatch" as batch {
  * Id : int <<PK>>
  --
  * IngredientId : int <<FK>>
  BatchCode : nvarchar(50)
  Quantity : decimal(18,2)
  ExpiryDate : datetime
  CostPrice : decimal(18,2)
  Location : nvarchar(100)
  CreatedAt : datetime
}

entity "InventoryTransaction" as transaction {
  * Id : int <<PK>>
  --
  * IngredientId : int <<FK>>
  Type : nvarchar(20)
  Quantity : decimal(18,2)
  ReferenceType : nvarchar(50)
  ReferenceId : int
  Note : nvarchar(500)
  CreatedAt : datetime
  CreatedBy : int <<FK>>
}

entity "Shift" as shift {
  * Id : int <<PK>>
  --
  * UserId : int <<FK>>
  StartTime : datetime
  EndTime : datetime
  StartCash : decimal(18,2)
  EndCash : decimal(18,2)
  TotalRevenue : decimal(18,2)
  Difference : decimal(18,2)
  Status : nvarchar(20)
  Note : nvarchar(500)
  CreatedAt : datetime
}

' Quan hệ
user ||--o{ order : "tạo"
user ||--o{ shift : "làm việc"
user ||--o{ transaction : "thực hiện"

area ||--o{ table : "có"

table ||--o{ order : "phục vụ"
table ||--o{ session : "có phiên"

session ||--o{ order : "chứa"

order ||--o{ orderdetail : "có"

category ||--o{ product : "phân loại"

product ||--o{ orderdetail : "được đặt"
product ||--o{ recipe : "có công thức"
product ||--o{ productsize : "có size"

topping }o--|| ingredient : "sử dụng"

recipe }o--|| ingredient : "cần"

ingcategory ||--o{ ingredient : "phân loại"

ingredient ||--o{ ingunit : "có đơn vị"
ingredient ||--o{ batch : "có lô"
ingredient ||--o{ transaction : "giao dịch"

order }o--o| shift : "trong ca"

@enduml
